<resources>
    <string name="app_name">A2ZApplication</string>
    <string name="a2z">A 2 Z</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="otp">OTP</string>
    <string name="continue_button">Continue</string>
    <string name="sign_in_with">Sign in with</string>
    <string name="or">or</string>
    <string name="successfully_loggedin">Successfully LoggedIn</string>
    <string name="otp_delivered">OTP Delivered</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kindly_enter_the_valid_phone_number">Kindly enter the valid phone number</string>
    <string name="invalid_otp">Invalid OTP</string>

    <string name="server_client_id">495053239530-2vvces9np5cbbvr48qdger6d7bosl008.apps.googleusercontent.com</string>
    <string name="request_access_text">Sorry, currently you don\'t have access to view the content, Kindly request for the access permission.</string>
    <string name="close">Close</string>
    <string name="request">Request</string>
</resources>